@@ -1,76 +1,0 @@
-#! /bin/sh
-### BEGIN INIT INFO
-# Provides:          nova-api-os-volume
-# Required-Start:    $remote_fs $syslog
-# Required-Stop:     $remote_fs $syslog
-# Default-Start:     2 3 4 5
-# Default-Stop:      0 1 6
-# Short-Description: nova-api volume openstack server
-# Description:       frontend OpenStack Volume API server for Nova
-### END INIT INFO
-
-
-set -e
-
-DAEMON=/usr/bin/nova-api-os-volume
-DAEMON_ARGS="--config-file=/etc/nova/nova.conf"
-PIDFILE=/var/run/nova/nova-api-os-volume.pid
-
-ENABLED=true
-
-if test -f /etc/default/nova-api-os-volume; then
-  . /etc/default/nova-api-os-volume
-fi
-
-mkdir -p /var/run/nova
-chown nova:root /var/run/nova/
-
-mkdir -p /var/lock/nova
-chown nova:root /var/lock/nova/
-
-uid="$(getent passwd nova | cut -f3 -d:)"
-gid="$(getent passwd nova | cut -f4 -d:)"
-
-. /lib/lsb/init-functions
-
-export PATH="${PATH:+$PATH:}/usr/sbin:/sbin"
-
-if ! [ -x ${DAEMON} ] ; then
-	exit 0
-fi
-
-case "$1" in
-  start)
-    test "$ENABLED" = "true" || exit 0
-    log_daemon_msg "Starting nova openstack volume api" "nova-api-os-volume"
-    start-stop-daemon --start --chdir /var/run --chuid ${uid}:${gid} -b -m --pidfile ${PIDFILE} --exec ${DAEMON} -- ${DAEMON_ARGS}
-    log_end_msg $?
-    ;;
-  stop)
-    test "$ENABLED" = "true" || exit 0
-    log_daemon_msg "Stopping nova openstack volume api" "nova-api-os-volume"
-    start-stop-daemon --stop --oknodo --pidfile ${PIDFILE}
-    log_end_msg $?
-    ;;
-  # Could we implement a reload if the daemon traps the -HUP signal? This would be done with:
-  # reload)
-  #   start-stop-daemon --stop --signal HUP --pidfile ${PID_FILE}
-  #   ;;
-  restart|force-reload)
-    test "$ENABLED" = "true" || exit 1
-    $0 stop
-    sleep 1
-    $0 start
-    ;;
-  status)
-    test "$ENABLED" = "true" || exit 0
-    # This is to be fixed: it doesn't exist in Debian
-    status_of_proc -p $PIDFILE $DAEMON nova-api-os-volume && exit 0 || exit $?
-    ;;
-  *)
-    log_action_msg "Usage: /etc/init.d/nova-api-os-volume {start|stop|restart|force-reload|status}"
-    exit 1
-    ;;
-esac
-
-exit 0
