@@ -1,1 +1,0 @@
-usr/bin/nova-api-os-volume
