@@ -1,7 +1,0 @@
-#!/bin/sh -e
-
-if [ "$1" = purge ]; then
-	update-rc.d nova-api-os-volume remove
-fi
-
-#DEBHELPER#
