@@ -1,1 +1,0 @@
-var/lib/nova/volumes
