@@ -1,111 +1,0 @@
-#!/bin/sh
-### BEGIN INIT INFO
-# Provides:          nova-volume
-# Required-Start:    $network $local_fs $remote_fs $syslog
-# Required-Stop:     $remote_fs
-# Default-Start:     2 3 4 5
-# Default-Stop:      0 1 6
-# Short-Description: Nova Volume
-# Description:       Provides EBS like storage for your
-#                    virtual machine instances
-### END INIT INFO
-
-# Author: Julien Danjou <acid@debian.org>
-
-# PATH should only include /usr/* if it runs after the mountnfs.sh script
-PATH=/sbin:/usr/sbin:/bin:/usr/bin
-DESC="OpenStack Compute Volume"
-NAME=nova-volume
-DAEMON=/usr/bin/nova-volume
-DAEMON_ARGS="--config-file=/etc/nova/nova.conf"
-PIDFILE=/var/run/$NAME.pid
-SCRIPTNAME=/etc/init.d/$NAME
-NOVA_USER=nova
-LOCK_DIR=/var/lock/nova/
-
-# Exit if the package is not installed
-[ -x $DAEMON ] || exit 0
-
-mkdir -p ${LOCK_DIR}
-chown ${NOVA_USER} ${LOCK_DIR}
-
-# Read configuration variable file if it is present
-[ -r /etc/default/$NAME ] && . /etc/default/$NAME
-
-. /lib/lsb/init-functions
-
-do_start()
-{
-	# Guess the VG by getting the first one we see in "vgdisplay -c -A"
-	# if nothing was set in the default file
-	VGDISPLAY=/sbin/vgdisplay
-	if [ -z "${nova_volume_group}" -a -x "$VGDISPLAY" ]
-	then
-		nova_volume_group=`$VGDISPLAY -c -A | head -n 1 | cut -d":" -f1 | awk '{print $1}'`
-	fi
-
-	# Adds what has been configured in /etc/default/nova-volume
-	if [ -n ${nova_volume_group} ] ; then
-		DAEMON_ARGS="${DAEMON_ARGS} --volume_group=${nova_volume_group}"
-	fi
-
-	start-stop-daemon --start --quiet --background --chuid ${NOVA_USER}:nova --make-pidfile --pidfile $PIDFILE --startas $DAEMON --test > /dev/null \
-		|| return 1
-	start-stop-daemon --start --quiet --background --chuid ${NOVA_USER}:nova --make-pidfile --pidfile $PIDFILE --startas $DAEMON -- \
-		$DAEMON_ARGS \
-		|| return 2
-}
-
-do_stop()
-{
-	start-stop-daemon --stop --quiet --retry=TERM/30/KILL/5 --pidfile $PIDFILE
-	RETVAL="$?"
-	rm -f $PIDFILE
-	return "$RETVAL"
-}
-
-case "$1" in
-  start)
-    log_daemon_msg "Starting $DESC " "$NAME"
-    do_start
-    case "$?" in
-		0|1) log_end_msg 0 ;;
-		2) log_end_msg 1 ;;
-	esac
-  ;;
-  stop)
-	log_daemon_msg "Stopping $DESC" "$NAME"
-	do_stop
-	case "$?" in
-		0|1) log_end_msg 0 ;;
-		2) log_end_msg 1 ;;
-	esac
-	;;
-  status)
-       status_of_proc "$DAEMON" "$NAME" && exit 0 || exit $?
-       ;;
-  restart|force-reload)
-	log_daemon_msg "Restarting $DESC" "$NAME"
-	do_stop
-	case "$?" in
-	  0|1)
-		do_start
-		case "$?" in
-			0) log_end_msg 0 ;;
-			1) log_end_msg 1 ;; # Old process is still running
-			*) log_end_msg 1 ;; # Failed to start
-		esac
-		;;
-	  *)
-		# Failed to stop
-		log_end_msg 1
-		;;
-	esac
-	;;
-  *)
-	echo "Usage: $SCRIPTNAME {start|stop|status|restart|force-reload}" >&2
-	exit 3
-	;;
-esac
-
-:
