@@ -1,3 +1,0 @@
-debian/nova_tgt.conf etc/tgt/conf.d
-etc/nova/rootwrap.d/volume.filters
-usr/bin/nova-volume
