@@ -1,1 +1,0 @@
-debian/mans/nova-volume.8
